k8s/gateway-resources/jenkins-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins
  namespace: jenkins
spec:
  parentRefs:
    - name: gateway-api
      namespace: default
  hostnames:
    - jenkins.minikube.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jenkins
          port: 8080
