k8s/gateway-resources/minio-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: prod
spec:
  parentRefs:
    - name: gateway-api
      namespace: default
  hostnames:
    - minio.minikube.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-s3
  namespace: prod
spec:
  parentRefs:
    - name: gateway-api
      namespace: default
  hostnames:
    - s3.minikube.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 9000
