k8s/gateway-resources/pg-admin-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  namespace: prod            # wherever you install the chart
spec:
  parentRefs:
    - name: gateway-api
      namespace: default
  hostnames:
    - pgadmin.minikube.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pgadmin        # verify with `kubectl get svc -n prod`
          port: 80
