k8s/gateway-resources/pg-tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: postgres
  namespace: database
spec:
  parentRefs:
    - name: gateway-api
      namespace: default
      sectionName: postgres-tcp
  rules:
    - backendRefs:
        - name: postgresql
          port: 5432
