k8s/gateway-resources/rabbitmq-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rabbitmq
  namespace: prod
spec:
  parentRefs:
    - name: gateway-api
      namespace: default       # namespace of your Gateway
  hostnames:
    - rabbitmq.minikube.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rabbitmq       # Service name — see note below
          port: 15672
